--- a/app/page.Module.scss
+++ b/app/page.Module.scss
@@ -1,5 +1,8 @@
-.header {
-  background-color: grey;
-  color: black;
-  padding: 2%;
+.Image {
+  z-index: 0;
+  height: 500px;
+}
+
+.landingText {
+  margin-top: 50px;
 }
