--- a/app/cart/page.module.scss
+++ b/app/cart/page.module.scss
@@ -1,11 +1,13 @@
 .cartPage {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(255, 255, 255);
-  margin-top: 30px;
-  padding-top: 100px;
-  min-height: 100vh;
-  row-gap: 30px;
+  align-items: center;
+  justify-content: center;
+  padding: 80px;
+  gap: 100px;
+  display: grid;
+  grid-template-columns: 300px 300px 300px 300px;
+  grid-template-rows: auto;
+  margin-top: 10px;
+  min-height: 90vh;
 }
 
 .productCart {
@@ -24,4 +26,30 @@
   align-items: center;
   justify-content: center;
   font-size: 2rem;
+}
+.image {
+  transition: transform 0.3s ease-in-out;
+}
+.hoverEffect:hover {
+  transform: scale(1.1);
+}
+
+.products {
+  color: black;
+  text-align: left;
+  font-style: normal;
+}
+.div {
+  text-align: center;
+  width: 170px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.h2 {
+  color: black;
+  text-align: left;
+  font-style: normal;
+  font-size: 20px;
 }
