--- a/app/wishlist/DeleteWishlist.module.scss
+++ b/app/wishlist/DeleteWishlist.module.scss
@@ -5,10 +5,10 @@
   background-color: #812e597e;
   color: rgb(0, 31, 57);
   border-radius: 5px;
-  margin-top: 15px;
-  margin-left: 10px;
+  margin-top: 10px;
+  margin-left: 100px;
   &:hover {
-    background-color: rgb(0, 31, 57);
+    background-color: #812e597e;
     color: white;
   }
 }
