--- a/app/cart/page.module.scss
+++ b/app/cart/page.module.scss
@@ -18,6 +18,8 @@
 
 .link {
   color: black;
+  margin-top: 00px;
+  margin-left: 100px;
 }
 
 .emptyCart {
@@ -52,4 +54,9 @@
   text-align: left;
   font-style: normal;
   font-size: 20px;
+}
+.price {
+  color: black;
+  margin-top: 400px;
+  margin-left: 00px;
 }
