--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -15,13 +15,13 @@
 
 .navbar {
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: flex-start;
   width: 100%;
   background-color: #812e597e;
   color: #fff;
   height: auto;
-  padding-left: 30px;
+  padding-left: 0px;
 
   ul {
     list-style: none;
